##Text encoding: utf-8

2016-03-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: fix GetMaxLineHeight().
	* plugins/loaders/cdx/cdx.cc: import and export retrosynthesis.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* plugins/paint/arrows/retrosynthesis.cc: ditto.
	* plugins/paint/arrows/retrosynthesis.h: ditto.
	* plugins/paint/arrows/retrosynthesisarrow.cc: ditto.
	* plugins/paint/arrows/retrosynthesisarrow.h: ditto.
	* plugins/paint/arrows/retrosynthesisstep.cc: ditto.
	* plugins/paint/arrows/retrosynthesisstep.h: ditto.

2016-03-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: add Text::GetMaxLineHeight().
	* libs/gccv/text.h: ditto.
	* libs/gcp/fragment.cc: fix behavior after rotation.
	* libs/gcp/mesomer.cc: initialize member.
	* libs/gcp/text.cc: new text properties.
	* libs/gcp/text.h: ditto.
	* libs/gcu/objprops.h: ditto.
	* plugins/loaders/cdx/cdx.cc: save fragments and mesomery.
	* plugins/loaders/cdxml/cdxml.cc: ditto.

2016-03-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text-tag.h: Change gccv::Tag from enum to int (avods runtime
	errors).
	* libs/gcp/fragment.cc: enhance rotation and GetProperty () method.
	* libs/gcp/fragment.h: change Update () signature.
	* libs/gcp/molecule.cc: update fragments when loaded.
	* libs/gcu/xml-utils.cc: don't save an invalid date.

2016-03-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/docprop.cc: use UTC time instead of simple dates.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/document.h: ditto.
	* libs/gcu/xml-utils.cc: import and export UTC times.
	* libs/gcu/xml-utils.h: ditto.
	* plugins/loaders/cdx/cdx.cc: export title.
	* plugins/loaders/cdxml/cdxml.cc: import and export texts and reactions.

2016-03-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: remove unused field.
	* plugins/loaders/cdxml/cdxml.cc: load reaction schemes.

2016-03-14  Jean Bréfort  <jean.brefort@normalesup.org>